--- a/src/interfaz/Aplicacion.form
+++ b/src/interfaz/Aplicacion.form
@@ -181,24 +181,24 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="7" rowCount="16">
                     <Column editable="false" title="" type="java.lang.Object">
-                      <Data value="6"/>
-                      <Data value="7"/>
-                      <Data value="8"/>
-                      <Data value="9"/>
-                      <Data value="10"/>
-                      <Data value="11"/>
-                      <Data value="12"/>
-                      <Data value="13"/>
-                      <Data value="14"/>
-                      <Data value="15"/>
-                      <Data value="16"/>
-                      <Data value="17"/>
-                      <Data value="18"/>
-                      <Data value="19"/>
-                      <Data value="20"/>
-                      <Data value="21"/>
+                      <Data value="6 am"/>
+                      <Data value="7 am"/>
+                      <Data value="8 am"/>
+                      <Data value="9 am"/>
+                      <Data value="10 am"/>
+                      <Data value="11 am"/>
+                      <Data value="12 pm"/>
+                      <Data value="1 pm"/>
+                      <Data value="2 pm"/>
+                      <Data value="3 pm"/>
+                      <Data value="4 pm"/>
+                      <Data value="5 pm"/>
+                      <Data value="6 pm"/>
+                      <Data value="7 pm"/>
+                      <Data value="8 pm"/>
+                      <Data value="9 pm"/>
                     </Column>
-                    <Column editable="false" title="Lunes" type="java.lang.Object"/>
+                    <Column editable="true" title="Lunes" type="java.lang.Object"/>
                     <Column editable="false" title="Martes" type="java.lang.Object"/>
                     <Column editable="false" title="Mi&#xe9;rcoles" type="java.lang.Object"/>
                     <Column editable="false" title="Jueves" type="java.lang.Object"/>
@@ -207,7 +207,7 @@
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
-                  <TableColumnModel selectionModel="0">
+                  <TableColumnModel selectionModel="1">
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
