--- a/src/interfaz/Aplicacion.form
+++ b/src/interfaz/Aplicacion.form
@@ -68,6 +68,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Horario"/>
+    <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+      <Connection code="Toolkit.getDefaultToolkit().getImage(&quot;src/icono.png&quot;)" type="code"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
@@ -109,7 +112,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jTabbedPane1" pref="320" max="32767" attributes="0"/>
+              <Component id="jTabbedPane1" pref="346" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jBtSalir" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -178,33 +181,8 @@
                     <LineBorder/>
                   </Border>
                 </Property>
-                <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="7" rowCount="16">
-                    <Column editable="false" title="" type="java.lang.Object">
-                      <Data value="6 am"/>
-                      <Data value="7 am"/>
-                      <Data value="8 am"/>
-                      <Data value="9 am"/>
-                      <Data value="10 am"/>
-                      <Data value="11 am"/>
-                      <Data value="12 pm"/>
-                      <Data value="1 pm"/>
-                      <Data value="2 pm"/>
-                      <Data value="3 pm"/>
-                      <Data value="4 pm"/>
-                      <Data value="5 pm"/>
-                      <Data value="6 pm"/>
-                      <Data value="7 pm"/>
-                      <Data value="8 pm"/>
-                      <Data value="9 pm"/>
-                    </Column>
-                    <Column editable="true" title="Lunes" type="java.lang.Object"/>
-                    <Column editable="false" title="Martes" type="java.lang.Object"/>
-                    <Column editable="false" title="Mi&#xe9;rcoles" type="java.lang.Object"/>
-                    <Column editable="false" title="Jueves" type="java.lang.Object"/>
-                    <Column editable="false" title="Viernes" type="java.lang.Object"/>
-                    <Column editable="false" title="S&#xe1;bado" type="java.lang.Object"/>
-                  </Table>
+                <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="modeloTabla" type="code"/>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="1">
@@ -254,9 +232,6 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
-              <AuxValues>
-                <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="//jtHorario.setDefaultRenderer(Object.class, render);"/>
-              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
